feat(完善): 添加 basic auth；添加 gorm，实验swaggertype；登录路由添加等；
